--- a/JavaWeb/src/main/webapp/pages/TelaEstado.xhtml
+++ b/JavaWeb/src/main/webapp/pages/TelaEstado.xhtml
@@ -15,7 +15,7 @@
         <p:dataTable id="tabela" emptyMessage="nenhum registro encontrado"
          paginator="true" value="#{estadoBean.estados}" var="estado">
           <f:facet name="header">
-               <p:commandButton value="Novo"/ actionListener="#estadoBean.novo">
+               <p:commandButton value="Novo" actionListener="#estadoBean.novo"/>
           </f:facet> 
         <p:column headerText="Nome" sortBy="#{estado.nome}" filterBy="#{estado.nome}">
              <h:outputText value="#{estado.nome}"/>
@@ -27,8 +27,7 @@
         
         <p:column headerText="Opções">
             <p:commandButton icon="ui-icon-trasch" actionListener="#{estadoBean.excluir}">
-            <p:confirm header="Confirmação" message="Deseja Excluir?" icon="ui-icon-alert"/>
-            
+            <p:confirm header="Confirmação" message="Deseja Excluir?" icon="ui-icon-alert"/>     
           </p:commandButton> 
           <p:commandButton icon="ui-icon-pencil" actionListener="#{estadoBean.editar}">
               <f:attribute name="estadoSelecionado" value="#{estado}"/>
